{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 12,
  "lineage": "d1683b21-a011-9e20-aff2-ec3d6509378d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "StanHomeWork-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ce824c157700cd2",
            "arn": "arn:aws:ec2:eu-central-1:154693272962:instance/i-0638a8ddeb2451b85",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0638a8ddeb2451b85",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "softuni",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-006f3995a22f125a9",
            "private_dns": "ip-10-10-10-92.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.10.92",
            "public_dns": "ec2-18-194-240-193.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.194.240.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07ef021c34ca267a8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092b84ca8e6ba272d",
            "tags": {
              "Name": "StanHomeWork-server-1"
            },
            "tags_all": {
              "Name": "StanHomeWork-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d6c3f85103b0ad48"
            ]
          },
          "dependencies": [
            "aws_security_group.main-pub-sg",
            "aws_subnet.main-snet",
            "aws_vpc.main-vpc",
            "data.aws_availability_zones.main-avz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:154693272962:internet-gateway/igw-0f734a0959e520264",
            "id": "igw-0f734a0959e520264",
            "owner_id": "154693272962",
            "tags": {
              "Name": "MAIN-IGW"
            },
            "tags_all": {
              "Name": "MAIN-IGW"
            },
            "vpc_id": "vpc-05fa2da881d816718"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-prt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:154693272962:route-table/rtb-08357d5932a4c5fc5",
            "id": "rtb-08357d5932a4c5fc5",
            "owner_id": "154693272962",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f734a0959e520264",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MAIN-PUBLIC_RT"
            },
            "tags_all": {
              "Name": "MAIN-PUBLIC_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-05fa2da881d816718"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-prt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb9e36eaed34d78c",
            "route_table_id": "rtb-08357d5932a4c5fc5",
            "subnet_id": "subnet-092b84ca8e6ba272d"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_route_table.main-prt",
            "aws_subnet.main-snet",
            "aws_vpc.main-vpc",
            "data.aws_availability_zones.main-avz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main-pub-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:154693272962:security-group/sg-0d6c3f85103b0ad48",
            "description": "Main Public SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6c3f85103b0ad48",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "main-pub-sg",
            "name_prefix": "",
            "owner_id": "154693272962",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05fa2da881d816718"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:154693272962:subnet/subnet-092b84ca8e6ba272d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092b84ca8e6ba272d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "154693272962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MAIN-SUB-NET"
            },
            "tags_all": {
              "Name": "MAIN-SUB-NET"
            },
            "vpc_id": "vpc-05fa2da881d816718"
          },
          "dependencies": [
            "aws_vpc.main-vpc",
            "data.aws_availability_zones.main-avz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:154693272962:vpc/vpc-05fa2da881d816718",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-08df274a329237b48",
            "default_route_table_id": "rtb-0e762dcc29de803a7",
            "default_security_group_id": "sg-075876aa00e06d188",
            "dhcp_options_id": "dopt-005ca53e65010938a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05fa2da881d816718",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e762dcc29de803a7",
            "owner_id": "154693272962",
            "tags": {
              "Name": "HomeWork-VPC"
            },
            "tags_all": {
              "Name": "HomeWork-VPC"
            }
          }
        }
      ]
    }
  ]
}